kubernetes/apps/kyverno/policy-reporter/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter
  namespace: kyverno
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]
      group: internal
      dns:
        query-name: policy-reporter.unscfleet.com
        query-type: A
      url: 1.1.1.1
spec:
  hostnames:
    - policy-reporter.unscfleet.com
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: policy-reporter-ui
          port: 8080
